--- a/object-detection/package.json
+++ b/object-detection/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "face-mask",
+  "name": "object-detection",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@tensorflow-models/face-landmarks-detection": "^1.0.1",
+    "@tensorflow-models/coco-ssd": "^2.2.2",
     "@tensorflow/tfjs": "^3.16.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
